force-app/main/default/objects/Dispute_Invoices__c/Dispute_Invoices__c.object-meta.xml
<CustomObject>
    <label>Dispute Invoices</label>
    <nameField>
        <label>Dispute Invoices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>