force-app/main/default/objects/Dispute_Invoices__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>The amount of the invoice that is now due.</description>
    <inlineHelpText>The amount of the invoice that is now due.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>