force-app/main/default/objects/Dispute_Invoices__c/fields/Customer_Trx_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trx_ID__c</fullName>
    <description>Customer transaction id, that helps identify the invoice</description>
    <label>Customer Trx ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>