force-app/main/default/objects/Dispute_Invoices__c/fields/Dispute__c.field-meta.xml
<CustomField>
    <fullName>Dispute__c</fullName>
    <description>Relationship field in between Dispute Invoices and Disputes (Case Object)</description>
    <label>Dispute</label>
    <type>MasterDetail</type>
</CustomField>