force-app/main/default/objects/Dispute_Invoices__c/fields/Freight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount__c</fullName>
    <description>The sum of the freight amount on all the invoices for the dispute.</description>
    <inlineHelpText>The sum of the freight amount on all the invoices for the dispute.</inlineHelpText>
    <label>Freight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>