force-app/main/default/objects/Dispute_Invoices__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date the invoice was generated</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>