force-app/main/default/objects/Dispute_Invoices__c/fields/Invoice_Get_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Get_Status__c</fullName>
    <label>Invoice Get Status</label>
    <type>TextArea</type>
</CustomField>