force-app/main/default/objects/Dispute_Invoices__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>The number of the invoice assigned to the dispute.</description>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>