force-app/main/default/objects/Dispute_Invoices__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <description>The total line amount of the invoice.</description>
    <inlineHelpText>The total line amount of the invoice.</inlineHelpText>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>