force-app/main/default/objects/Dispute_Invoices__c/fields/Original_Balance__c.field-meta.xml
<CustomField>
    <fullName>Original_Balance__c</fullName>
    <description>The original balance due on the invoice in the assigned dispute.</description>
    <label>Original Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>