force-app/main/default/objects/Dispute_Invoices__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Purchase order number from the order on the invoice.</description>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>