force-app/main/default/objects/Dispute_Invoices__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <description>This is the order number from ERP, but for other invoice types it can be a different reference.</description>
    <label>Related Order</label>
    <length>30</length>
    <type>Text</type>
</CustomField>