force-app/main/default/objects/Dispute_Invoices__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The source where the invoice record came from OM (Order Mgmt), TKS, etc.</description>
    <inlineHelpText>The source where the invoice record came from OM (Order Mgmt), TKS, etc.</inlineHelpText>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>