force-app/main/default/objects/Dispute_Invoices__c/fields/Summary_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Summary_Invoice__c</fullName>
    <description>A grouping of multiple invoices based on certain predefined criteria based on whether its service invoices or other types.</description>
    <inlineHelpText>A grouping of multiple invoices based on certain predefined criteria based on whether its service invoices or other types.</inlineHelpText>
    <label>Summary Invoice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>