force-app/main/default/objects/Dispute_Invoices__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>The tax amount on the invoice.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>