force-app/main/default/objects/Dispute_Invoices__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Type of invoice transaction</description>
    <inlineHelpText>Type of invoice transaction</inlineHelpText>
    <label>Transaction Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>